objects/PS_Revenue_Detail__c.object
<CustomObject>
    <description>Details: Used for storing transactional PS project revenue information for feeding to the RevPro system. Data is written from the PS PureProject PSA tool and read into RevPro.
Owned by: Professional Services
Downstream Impact: Any changes may affect the PSA tool integration to salesforce and the RevPro integration</description>
    <fields>
        <fullName>Associated_Expert_Apps_Amount__c</fullName>
        <description>The amount of PS Expert Apps associated to this CAS Event</description>
        <label>Associated Expert Apps Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_ID__c</fullName>
        <description>The salesforce ID of the Opportunity Product item to which this PS Revenue Event relates. This is just the ID and not a lookup and will be used with the integration to RevPro to identify to which SO line this event is associated.</description>
        <label>Associated Opportunity Product ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_Line_Num__c</fullName>
        <description>What it Does? Shows the line number of the associated opportunity product for this revenue event
Downstream Impact? Used for tracking/reporting purposes
Owner? RevPro/IT</description>
        <label>Associated Opportunity Product Line Num</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product_Name__c</fullName>
        <description>The name of the opportunity product associated to this RevPro Event</description>
        <label>Associated Opportunity Product Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Opportunity_Product__c</fullName>
        <formula>IF( ISBLANK(Associated_Opportunity_Product_ID__c) , 
&quot;&quot;, 
HYPERLINK(LEFT( $Api.Partner_Server_URL_440, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_440)) &amp; Associated_Opportunity_Product_ID__c , Associated_Opportunity_Product_Name__c ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAS_Term_End_Date__c</fullName>
        <description>The end Date for the CAS (Custom Application Support) term for a CAS Event (RevPro)</description>
        <label>CAS Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAS_Term_Start_Date__c</fullName>
        <description>The start Date for the CAS (Custom Application Support) term for a CAS Event (RevPro)</description>
        <label>CAS Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference to the master opportunity, which will either be the same as the opportunity master detail link, or if this record is related to a change request (CR/PCR), this will be the reference the parent project linked opportunity record</description>
        <label>Master Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PS Revenue Details (Master Opportunity)</relationshipLabel>
        <relationshipName>PS_Revenue_Details_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>The Opportunity to which this record is related</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PS Revenue Details</relationshipLabel>
        <relationshipName>PS_Revenue_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PS_Revenue_Date__c</fullName>
        <description>The date for which this PS Revenue transaction record applies</description>
        <label>PS Revenue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>The quantity associated to the revenue transaction record</description>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>The type of the revenue transaction event for PS</description>
        <label>Revenue Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Fixed Fee</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>The total amount of the PS Revenue transaction</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PS Revenue Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSR-{00000}</displayFormat>
        <label>PS Revenue Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Revenue Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>